--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -1,8 +1,5 @@
 FROM php:8.0-fpm
 
-ARG WWWUSER
-ARG WWWGROUP
-
 # Set working directory
 WORKDIR /var/www
 
@@ -11,18 +8,20 @@ RUN apt-get update && apt-get install -y \
     git \
     curl \
     libpng-dev \
+    libjpeg-dev \
+    libfreetype6-dev \
     libonig-dev \
     libxml2-dev \
+    libpq-dev \
+    libzip-dev \
+    libcurl4-openssl-dev \
     zip \
-    unzip
+    unzip \
+    default-mysql-client
 
 # Install PHP extensions
-RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd
-
-# Clear cache
-RUN apt-get -y autoremove \
-	&& apt-get clean \
-	&& rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+RUN docker-php-ext-configure gd --with-freetype --with-jpeg \
+    && docker-php-ext-install pdo pdo_mysql mbstring exif pcntl bcmath gd zip curl
 
 # Get latest Composer
 RUN php -r "readfile('http://getcomposer.org/installer');" | php -- --install-dir=/usr/bin/ --filename=composer
@@ -33,11 +32,9 @@ RUN curl -sL https://deb.nodesource.com/setup_15.x | bash - \
 	&& curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
 	&& echo "deb https://dl.yarnpkg.com/debian/ stable main" > /etc/apt/sources.list.d/yarn.list \
 	&& apt-get update \
-	&& apt-get install -y yarn \
-    && apt-get -y autoremove \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+	&& apt-get install -y yarn
 
-# Create app'owner
-RUN groupadd --force -g $WWWGROUP heracles
-RUN useradd --create-home --shell /bin/bash --no-user-group --gid $WWWGROUP --uid $WWWUSER heracles
+# Clear cache
+RUN apt-get -y autoremove \
+	&& apt-get clean \
+	&& rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
