--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,6 @@ APP_DEBUG=true
 APP_URL=http://localhost
 APP_PORT=8089
 
-WWWUSER=1000
-WWWGROUP=1000
-
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
@@ -51,3 +48,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FORWARD_MAILHOG_PORT=1025
+FORWARD_MAILHOG_DASHBOARD_PORT=8025
