--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,7 @@ networks:
 
 services:
   app:
-    build:
-      context: ./docker/app
-      args:
-        WWW_USER: '${WWW_USER}'
-        WWW_GROUP: '${WWW_GROUP}'
+    image: 'williamsuppo/php-fpm:8.1'
     networks:
       - app
     volumes:
@@ -18,10 +14,7 @@ services:
     user: '${WWW_USER}'
 
   nginx:
-    build:
-      context: ./docker/nginx
-    ports:
-      - ${APP_PORT:-80}:80
+    image: 'williamsuppo/nginx:latest'
     networks:
       - app
     volumes:
@@ -35,13 +28,5 @@ services:
       MYSQL_USER: '${DB_USERNAME}'
       MYSQL_PASSWORD: '${DB_PASSWORD}'
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
-    networks:
-      - app
-
-  mailhog:
-    image: 'mailhog/mailhog:latest'
-    ports:
-      - '${FORWARD_MAILHOG_PORT:-1025}:1025'
-      - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
     networks:
       - app
