--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,19 +6,14 @@ networks:
 
 services:
   app:
-    image: 'williamsuppo/php-fpm:8.1'
+    image: 'williamsuppo/php:8.1'
     networks:
       - app
+    ports:
+      - '${APP_PORT:-80}:80'
     volumes:
-      - '.:/var/www'
+      - '.:/app'
     user: '${WWW_USER}'
-
-  nginx:
-    image: 'williamsuppo/nginx:latest'
-    networks:
-      - app
-    volumes:
-      - './public:/var/www/public'
 
   mysql:
     image: 'mysql:8.0'
@@ -28,5 +23,15 @@ services:
       MYSQL_USER: '${DB_USERNAME}'
       MYSQL_PASSWORD: '${DB_PASSWORD}'
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+    networks:
+      - app
+    ports:
+      - '${FORWARD_MYSQL_PORT:-3306}:3306'
+
+  mailhog:
+    image: 'mailhog/mailhog:latest'
+    ports:
+      - '${FORWARD_MAILHOG_PORT:-1025}:1025'
+      - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
     networks:
       - app
