--- a/.env.example
+++ b/.env.example
@@ -54,3 +54,5 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 FORWARD_MAILHOG_PORT=1025
 FORWARD_MAILHOG_DASHBOARD_PORT=8025
+
+FORWARD_MYSQL_PORT=3306
