--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,21 +4,36 @@ networks:
   app:
     driver: bridge
 
-volumes:
-  mysql:
-    driver: local
-
 services:
   app:
-    image: 'local/boilerplate:latest'
+    build:
+      context: ./docker/app
+      args:
+        WWW_USER: '${WWW_USER}'
+        WWW_GROUP: '${WWW_GROUP}'
     networks:
       - app
+    volumes:
+      - '.:/var/www'
+    user: '${WWW_USER}'
+
+  nginx:
+    build:
+      context: ./docker/nginx
     ports:
-      - '${APP_PORT:-8089}:80'
-    environment:
-      APP_ENV: 'production'
-      APP_DEBUG: 'false'
-      APP_KEY: 'base64:xdyl3ZeI2L6WOqeHaQUkLST1d6/9/Qj0vB8OZT3O4l8='
+      - ${APP_PORT:-80}:80
+    networks:
+      - app
+    volumes:
+      - './public:/var/www/public'
+
+  mailhog:
+    image: 'mailhog/mailhog:latest'
+    ports:
+      - '${FORWARD_MAILHOG_PORT:-1025}:1025'
+      - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
+    networks:
+      - app
 
   mysql:
     image: 'mysql:8.0'
@@ -32,11 +47,3 @@ services:
       - app
     ports:
       - '${FORWARD_MYSQL_PORT:-3306}:3306'
-
-  mailhog:
-    image: 'mailhog/mailhog:latest'
-    ports:
-      - '${FORWARD_MAILHOG_PORT:-1025}:1025'
-      - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
-    networks:
-      - app
