--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     },
     "devDependencies": {
         "axios": "^0.25",
+        "autoprefixer": "^10.4.7",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
-        "tailwindcss": "^2.0.4",
+        "postcss": "^8.4.14",
+        "tailwindcss": "^3.0.24",
         "vue": "^2.6.12",
         "vue-loader": "^15.9.5",
         "vue-template-compiler": "^2.6.12"
